--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       .tarjeta-safari {
         /* El nombre del archivo debe ser idéntico al que tienes en tu carpeta */
         background-image:
-          linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),
+          linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.2)),
           url("animales.jpg");
 
         background-size: cover; /* Cubre todo el div sin deformarse */
@@ -236,8 +236,8 @@
       }
     </style>
   </head>
-  <body>
-    <div class="hero-section" class="tarjeta-safari">
+  <body class="tarjeta-safari">
+    <div class="hero-section">
       <h1>¡Pronto tendremos un nuevo explorador en la familia!</h1>
       <p>Desliza hacia abajo para descubrir la aventura</p>
     </div>
@@ -245,32 +245,49 @@
     <div class="invitacion-container" id="invitacionInfo">
       <div class="invitacion">
         <div class="header-safari">
-          <div class="animales-small">🌿</div>
+          <div class="animales-small">
+            <img
+              src="leonfondo.png"
+              alt="León animado estilo safari"
+              width="300"
+              height="200"
+            />
+          </div>
           <h2>Baby Shower</h2>
+          <h2>de Joaquin</h2>
           <div class="sub-header">¡Una nueva aventura comienza!</div>
         </div>
 
         <div class="contenido">
           <p>
-            Acompáñanos a celebrar la pronta llegada de nuestro pequeño
-            explorador:
+            Acompáña a mis papás Joaquin y Fernanda a celebrar la pronta llegada
+            de este pequeño explorador
           </p>
-
-          <h3 class="nombre-bebe">Joaquin</h3>
 
           <div class="detalles">
             <p>📅 <strong>Sábado, 14 de Marzo</strong></p>
             <p>🕒 <strong>4:00 PM</strong></p>
             <p>
-              📍 <strong>Jardín de Eventos "La Selva"</strong><br />Av. Aventura
-              #123, Ciudad
+              📍
+              <strong>
+                <a
+                  href="https://www.google.com/maps/dir/19.501081,-99.273694/19.563625,-98.887183/@19.5926064,-99.4286509,10z/data=!3m1!4b1!4m6!4m5!1m1!4e1!1m1!4e1!3e0?entry=ttu&g_ep=EgoyMDI2MDIwMS4wIKXMDSoKLDEwMDc5MjA2OUgBUAM%3D"
+                  >Ver la ubicación</a
+                >
+              </strong>
             </p>
-            <p>🎁 <strong>Sugerencia:</strong> Lluvia de sobres o Pañales</p>
+            <p>
+              🎁
+              <a
+                href="https://www.amazon.com.mx/baby-reg/fernanda-altamirano-mayo-2026-naucalpandejuarez/ZLR39BB86TRT"
+                ><strong>Mesa de regalos</strong>
+              </a>
+            </p>
           </div>
 
           <p>¡Tu presencia hará este día más especial!</p>
 
-          <a href="https://wa.me/tu-numero-aqui" class="boton-confirmar">
+          <a href="https://wa.me/5644326670" class="boton-confirmar">
             Confirmar Asistencia
           </a>
         </div>
