--- a/index.html
+++ b/index.html
@@ -49,19 +49,30 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        color: white;
+        color: #29ab87;
         text-align: center;
         position: relative;
         overflow: hidden; /* Para que los animales no se salgan */
       }
 
       .hero-section h1 {
+        background-image:
+          linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.2)),
+          url("animales.jpg");
+        background-size: cover; /* Cubre todo el div sin deformarse */
+        background-position: center; /* Centra la imagen de fondo */
+        background-repeat: no-repeat; /* Evita que la imagen se repita */
+        padding: 50px;
+        border-radius: 15px;
+        text-align: center;
+        min-height: 300px; /* Altura mínima para asegurar que se vea la imagen */
         font-family: "Playfair Display", serif;
         font-size: 3.5rem;
         margin: 0;
         letter-spacing: 3px;
         z-index: 2; /* Para que esté por encima de los animales */
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        color: #29ab87;
       }
 
       .hero-section p {
@@ -234,18 +245,66 @@
           font-size: 2rem;
         }
       }
+      .contenedor-centrado {
+        display: flex; /* Activa el modo flexible */
+        justify-content: center; /* Centra horizontalmente */
+        align-items: center; /* Centra verticalmente */
+      }
+      .scroll-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+      }
+
+      .scroll-container p {
+        font-size: 0.9rem;
+        color: white;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin-bottom: 10px;
+      }
+
+      .flecha {
+        width: 20px;
+        height: 20px;
+        border-right: 3px solid #29ab87; /* Color dorado ocre */
+        border-bottom: 3px solid #29ab87;
+        transform: rotate(45deg);
+        animation: saltar 2s infinite;
+      }
+
+      /* Animación para que la flecha suba y baje suavemente */
+      @keyframes saltar {
+        0%,
+        20%,
+        50%,
+        80%,
+        100% {
+          transform: translateY(0) rotate(45deg);
+        }
+        40% {
+          transform: translateY(-10px) rotate(45deg);
+        }
+        60% {
+          transform: translateY(-5px) rotate(45deg);
+        }
+      }
     </style>
   </head>
-  <body class="tarjeta-safari">
+  <body>
     <div class="hero-section">
       <h1>¡Pronto tendremos un nuevo explorador en la familia!</h1>
-      <p>Desliza hacia abajo para descubrir la aventura</p>
+      <div class="scroll-container">
+        <div class="flecha"></div>
+      </div>
     </div>
 
     <div class="invitacion-container" id="invitacionInfo">
       <div class="invitacion">
         <div class="header-safari">
-          <div class="animales-small">
+          <div class="contenedor-centrado">
             <img
               src="leonfondo.png"
               alt="León animado estilo safari"
