--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       .tarjeta-safari {
         /* El nombre del archivo debe ser idéntico al que tienes en tu carpeta */
         background-image:
-          linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.2)),
+          linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1)),
           url("animales.jpg");
 
         background-size: cover; /* Cubre todo el div sin deformarse */
@@ -49,7 +49,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        color: #29ab87;
+        color: #fffdd0;
         text-align: center;
         position: relative;
         overflow: hidden; /* Para que los animales no se salgan */
@@ -57,7 +57,7 @@
 
       .hero-section h1 {
         background-image:
-          linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.2)),
+          linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1)),
           url("animales.jpg");
         background-size: cover; /* Cubre todo el div sin deformarse */
         background-position: center; /* Centra la imagen de fondo */
@@ -150,7 +150,7 @@
       }
 
       .invitacion {
-        background-color: white;
+        background-color: #fffdd0;
         max-width: 450px;
         width: 100%;
         border-radius: 20px;
@@ -164,7 +164,7 @@
       .header-safari {
         background-color: #8da083;
         padding: 40px 20px;
-        color: white;
+        color: #fffdd0;
       }
 
       .animales-small {
@@ -202,8 +202,8 @@
       .detalles {
         margin: 30px 0;
         line-height: 1.8;
-        border-top: 1px solid #eee;
-        border-bottom: 1px solid #eee;
+        border-top: 1px solid #fffdd0;
+        border-bottom: 1px solid #fffdd0;
         padding: 20px 0;
       }
 
@@ -319,7 +319,7 @@
 
         <div class="contenido">
           <p>
-            Acompáña a mis papás Joaquin y Fernanda a celebrar la pronta llegada
+            Acompáña a mis papás Fernanda y Joaquin a celebrar la pronta llegada
             de este pequeño explorador
           </p>
 
