--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         overflow-x: hidden; /* Evita scroll horizontal */
       }
       .hero-section {
-        width: 100%;
+        width: 800%;
         height: 100vh; /* Ocupa el 100% de la altura de la ventana */
         background: linear-gradient(
           to bottom,
@@ -232,6 +232,14 @@
   </head>
   <body>
     <div class="hero-section">
+      <div class="contenedor-centrado">
+        <img
+          src="bebe.png"
+          alt="León animado estilo safari"
+          width="300"
+          height="200"
+        />
+      </div>
       <h1>¡Pronto tendremos un nuevo explorador en la familia!</h1>
       <div class="scroll-container">
         <div class="flecha"></div>
