--- a/index.html
+++ b/index.html
@@ -233,12 +233,7 @@
   <body>
     <div class="hero-section">
       <div class="contenedor-centrado">
-        <img
-          src="bebe.png"
-          alt="León animado estilo safari"
-          width="300"
-          height="200"
-        />
+        <img src="bebe.png" />
       </div>
       <h1>¡Pronto tendremos un nuevo explorador en la familia!</h1>
       <div class="scroll-container">
