--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         overflow-x: hidden; /* Evita scroll horizontal */
       }
       .hero-section {
-        width: 100%;
+        width: 100vw;
         height: 100vh; /* Ocupa el 100% de la altura de la ventana */
         background: linear-gradient(
           to bottom,
