--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
         display: flex; /* Activa el modo flexible */
         justify-content: center; /* Centra horizontalmente */
         align-items: center; /* Centra verticalmente */
+        height: 80vh;
+        width: 80vw;
       }
       .scroll-container {
         display: flex;
