--- a/index.html
+++ b/index.html
@@ -186,8 +186,6 @@
         display: flex; /* Activa el modo flexible */
         justify-content: center; /* Centra horizontalmente */
         align-items: center; /* Centra verticalmente */
-        height: 80vh;
-        width: 80vw;
       }
       .scroll-container {
         display: flex;
@@ -235,7 +233,7 @@
   <body>
     <div class="hero-section">
       <div class="contenedor-centrado">
-        <img src="bebe.png" />
+        <img src="bebe.png" width="80vw" height="80vh" />
       </div>
       <h1>¡Pronto tendremos un nuevo explorador en la familia!</h1>
       <div class="scroll-container">
