--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="es">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Delius&family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Baby Shower Safari</title>
@@ -23,6 +29,9 @@
         overflow-x: hidden; /* Evita scroll horizontal */
       }
       .hero-section {
+        font-family: "Satisfy", cursive;
+        font-weight: 400;
+        font-style: normal;
         width: 100vw;
         height: 100vh; /* Ocupa el 100% de la altura de la ventana */
         background: linear-gradient(
@@ -124,6 +133,9 @@
       }
 
       .contenido {
+        font-family: "Delius", cursive;
+        font-weight: 400;
+        font-style: normal;
         padding: 40px 30px;
         color: #006847;
         font-size: medium;
@@ -168,6 +180,8 @@
       @media (max-width: 600px) {
         .hero-section h1 {
           font-size: 2.5rem;
+          padding-left: 15%;
+          padding-right: 15%;
         }
         .hero-section p {
           font-size: 1rem;
