--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       }
 
       .hero-section h1 {
-        font-family: "Playfair Display", serif;
+        font-family: "Satisfy", cursive;
+        font-weight: 400;
+        font-style: normal;
         font-size: 3.5rem;
         margin: 0;
         letter-spacing: 3px;
@@ -60,6 +62,9 @@
       }
 
       .hero-section p {
+        font-family: "Satisfy", cursive;
+        font-weight: 400;
+        font-style: normal;
         font-size: 1.2rem;
         margin-top: 10px;
         z-index: 2;
@@ -79,6 +84,9 @@
       }
 
       .invitacion-container {
+        font-family: "Satisfy", cursive;
+        font-weight: 400;
+        font-style: normal;
         transform: translateY(100vh); /* Inicialmente fuera de la vista */
         transition: transform 1s ease-out; /* Animación de desplazamiento */
         width: 100%;
