--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Delius&family=Satisfy&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Delius&family=Playwrite+NZ+Basic:wght@100..400&family=Satisfy&display=swap"
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
@@ -29,8 +29,9 @@
         overflow-x: hidden; /* Evita scroll horizontal */
       }
       .hero-section {
-        font-family: "Satisfy", cursive;
-        font-weight: 400;
+        font-family: "Playwrite NZ Basic", cursive;
+        font-optical-sizing: auto;
+        font-weight: <weight>;
         font-style: normal;
         width: 100vw;
         height: 100vh; /* Ocupa el 100% de la altura de la ventana */
@@ -50,8 +51,9 @@
       }
 
       .hero-section h1 {
-        font-family: "Satisfy", cursive;
-        font-weight: 400;
+        font-family: "Playwrite NZ Basic", cursive;
+        font-optical-sizing: auto;
+        font-weight: <weight>;
         font-style: normal;
         font-size: 3.5rem;
         margin: 0;
@@ -84,8 +86,9 @@
       }
 
       .invitacion-container {
-        font-family: "Satisfy", cursive;
-        font-weight: 400;
+        font-family: "Playwrite NZ Basic", cursive;
+        font-optical-sizing: auto;
+        font-weight: <weight>;
         font-style: normal;
         transform: translateY(100vh); /* Inicialmente fuera de la vista */
         transition: transform 1s ease-out; /* Animación de desplazamiento */
@@ -127,7 +130,10 @@
       }
 
       .header-safari h2 {
-        font-family: "Playfair Display", serif;
+        font-family: "Playwrite NZ Basic", cursive;
+        font-optical-sizing: auto;
+        font-weight: <weight>;
+        font-style: normal;
         margin: 0;
         font-size: 2rem;
         letter-spacing: 2px;
@@ -144,6 +150,7 @@
         font-family: "Delius", cursive;
         font-weight: 400;
         font-style: normal;
+        font-size: 1.5rem;
         padding: 40px 30px;
         color: #006847;
         font-size: medium;
